Agregando el segundo parrafo

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Aqui iria el titulo de la página</h1>
-    <p></p>Esto es un  párrafo</p>
+    <p>Esto es un  párrafo</p>
+    <p>Esto es un segundo párrafo</p>
 </body>
 </html>
